--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <title>React App</title> -->
-    <title>%REACT_APP_SERVER_URL%:%SERVER_PORT%</title>
+    <title>%REACT_APP_SERVER_URL%:%REACT_APP_SERVER_PORT%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
